commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,14 @@
     <title>ESTE ES EL TITULO DEL POST</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Este es el parrafo del post</p>
+    <div id="container">
+        <div id="post">
+            <h1>este es el titulo del blog post</h1>
+            <p>Este es el contenido del blogpost en donde es
+                mostrara las diferentes caracteristicas entre las ramas
+            </p>
+        </div>
+    </div>
+    
 </body>
 </html>
