--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,14 @@
     <title>ESTE ES EL TITULO DEL POST</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Este es el parrafo del post</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este sera el titulo del post</h1>
+            <p>
+                Este sera el inicio del post en donde se mencionara
+                las nuevas caracteristicas de las cabeceras
+            </p>
+        </div>
+    </div>
 </body>
 </html>
