--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,10 @@
             <p>Este es el contenido del blogpost en donde es
                 mostrara las diferentes caracteristicas entre las ramas
             </p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. 
+                Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
+                Pero estadísticamente no lo eres.... por ahora.</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
     
