--- a/blogpost.html
+++ b/blogpost.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Hyperblog
+            <span id="tagline">Tu blog de cabecera</span>
+        </div>
         <div id="post">
-            <h1>este es el titulo del blog post</h1>
-            <p>Este es el contenido del blogpost en donde es
-                mostrara las diferentes caracteristicas entre las ramas
+            <h1>Este sera el titulo del post</h1>
+            <p>
+                Este sera el inicio del post en donde se mencionara
+                las nuevas caracteristicas de las cabeceras
             </p>
-            <p>Los blogs son la mejor forma de compartir información y tus ideas. 
-                Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
-                Pero estadísticamente no lo eres.... por ahora.</p>
-            <p>Suscribete y dale like</p>
         </div>
     </div>
-    
 </body>
 </html>
