--- a/blogpost.html
+++ b/blogpost.html
@@ -14,12 +14,16 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Este sera el titulo del post</h1>
-            <p>
-                Este sera el inicio del post en donde se mencionara
-                las nuevas caracteristicas de las cabeceras
+            <h1>este es el titulo del blog post</h1>
+            <p>Este es el contenido del blogpost en donde es
+                mostrara las diferentes caracteristicas entre las ramas
             </p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. 
+                Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
+                Pero estadísticamente no lo eres.... por ahora.</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
+    
 </body>
 </html>
