--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,9 @@
                 Pero estadísticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con cariño
+        </div>
     </div>
     
 </body>
