--- a/blogpost.html
+++ b/blogpost.html
@@ -15,9 +15,9 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>este es el titulo del blog post</h1>
+            <h1>este es el título del blog post</h1>
             <p>Este es el contenido del blogpost en donde es
-                mostrara las diferentes caracteristicas entre las ramas
+                mostrara las diferentes características entre las ramas
             </p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. 
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
