--- a/blogpost.html
+++ b/blogpost.html
@@ -22,7 +22,7 @@
             <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. 
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
                 Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
-            <p>El curso de Git est&acute; dando frutos de aprendizaje :D</p>
+            <p>El curso de Git est&aacute; dando frutos de aprendizaje :D</p>
                 
         </div>
         <div id="footer">
