se cambia el titulo del post

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>este es el t&iacute;tulo del blog post</h1>
+            <h1>Comienzo de un gran proyecto</h1>
             <p>Este es el contenido del blogpost en donde es
                 mostrara las diferentes caracter&iacute;sticas entre las ramas
             </p>
