--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,7 @@
             <p>Este es el contenido del blogpost en donde es
                 mostrara las diferentes caracter&iacute;sticas entre las ramas
             </p>
+            <p style="text-align: center;"><img src="imagen/goku.png"  width="50%" height="50%" alt=""></p>
             <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. 
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
                 Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
